--- a/src/components/portfolio/Portfolio.css
+++ b/src/components/portfolio/Portfolio.css
@@ -1,30 +1,24 @@
-.project-card {
-    margin-top : 0;
-  background-color: #282828;
-  padding: 24px;
-  border-radius: 12px;
-  box-shadow: 0 4px 16px rgba(108, 56, 255, 0.3);
-  transition: transform 0.2s;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start; /* מיישר לשמאל כברירת מחדל */
-  gap: 12px;
+.portfolio {
+  padding: 2rem;
   text-align: left;
 }
 
-.project-card h3 {
-  align-self: center; /* מרכז את הכותרת בלבד */
-  font-size: 1.3rem;
+.maintenance {
+  margin: 2rem auto;
+  padding: 2rem;
+  max-width: 400px;
+  background-color: #282828;
+  border-radius: 12px;
+  box-shadow: 0 4px 16px rgba(108, 56, 255, 0.3);
   color: #fff;
-  margin: 0;
 }
 
-.project-card p {
+.maintenance h3 {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.maintenance p {
   font-size: 1rem;
   color: #ccc;
-  margin: 0;
-}
-
-.project-card:hover {
-  transform: translateY(-6px);
 }
